# email_ai_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.md  docker-compose.yml  main.py  mock_email.json  pyproject.toml  requirements.txt
app/: config.py  deps.py  main.py
app/api/: __init__.py  ai.py  auth.py  dependencies.py  emails.py  gmail.py  ingestion.py  mailbox.py  outlook.py
app/db/: models.py  session.py
app/schemas/: __init__.py  auth.py  email.py  gmail.py  ingestion.py  mailbox.py  outlook.py  qa.py
app/services/: ai_search.py  answer_engine.py  auth.py  chat_history.py  email_ingest.py  embeddings.py  full_ingestion.py  gmail_client.py  gmail_ingest.py  llm_provider.py  outlook_client.py  outlook_ingest.py  search_index_es.py  text_normalization.py  tool_selector.py
app/tools/: __init__.py  base.py  calendar.py  compose.py  current_thread.py  email_history.py
scripts/: action_prompt.txt  email_prompt.txt  generate_actions.py  ingest_mock_emails.py  process_emails.py
user_dashboard/: README.md  package-lock.json  package.json  vite.config.js
user_dashboard/src/: App.jsx  index.css  themes.js
user_dashboard/src/components/: AgentView.jsx  AllEmailsView.jsx  DashboardLayout.jsx  EmailModal.jsx  LoginPage.jsx  ProfileView.jsx  QuadrantView.jsx
web/: app.js  index.html  login.html  login.js  oauth-callback.html  style.css
