[project]
name = "email-ai-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "blinker==1.9.0",
    "certifi==2025.11.12",
    "click==8.3.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "elastic-transport==8.17.1",
    "elasticsearch==8.19.2",
    "fastapi==0.124.4",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "markupsafe==3.0.3",
    "numpy==2.3.5",
    "openai==2.11.0",
    "opencc-python-reimplemented==0.1.7",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "sqlalchemy==2.0.45",
    "starlette==0.50.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.2",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "werkzeug==3.1.4",
]
